--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -7,8 +7,9 @@
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="126dp" />
 </LinearLayout>
