--- a/app/src/main/res/layout/footer_tasks.xml
+++ b/app/src/main/res/layout/footer_tasks.xml
@@ -8,10 +8,10 @@
     android:gravity="center">
 
     <TextView
+        android:hint="Tap the completed task to cross it out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Tap the completed task to cross it out"
         android:textSize="20sp" />
 
 </RelativeLayout>
