--- a/app/src/main/res/layout/create_appointment.xml
+++ b/app/src/main/res/layout/create_appointment.xml
@@ -7,81 +7,117 @@
 
     <EditText
         android:id="@+id/appointmentNotes"
-        android:layout_width="380dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="15dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Notes"
         android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="293dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appointmentTitle" />
 
     <TextView
         android:id="@+id/createAppointmentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="58dp"
         android:text="Create appointment"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/appointmentTitle"
-        android:layout_width="380dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Title"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createAppointmentTitle" />
 
     <EditText
         android:id="@+id/appStartDate"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="14dp"
         android:ems="10"
         android:hint="Start date"
         android:inputType="date"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="153dp" />
+        app:layout_constraintBottom_toTopOf="@+id/appStartTime"
+        app:layout_constraintEnd_toStartOf="@+id/appEndDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/appEndDate"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="14dp"
         android:ems="10"
         android:hint="End date"
         android:inputType="date"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="153dp" />
+        app:layout_constraintBottom_toTopOf="@+id/appEndTime"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/appStartDate"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/appEndTime"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="15dp"
         android:ems="10"
         android:hint="End time"
         android:inputType="time"
-        tools:layout_editor_absoluteX="216dp"
-        tools:layout_editor_absoluteY="217dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/appStartTime"
+        app:layout_constraintTop_toBottomOf="@+id/appEndDate" />
 
     <Button
         android:id="@+id/btnAddAppointment"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="130dp"
         android:onClick="validateAppointment"
         android:text="Add Appointment"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="423dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appointmentNotes" />
 
     <EditText
         android:id="@+id/appStartTime"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Start time"
         android:inputType="time"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="217dp" />
+        app:layout_constraintEnd_toStartOf="@+id/appEndTime"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appStartDate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
