--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context="MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/drawer">
 
-    <Button
-        android:id="@+id/btnGoCalendar"
+    <include
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:text="Go to calendar" />
+        layout="@layout/drawer_toolbar"/>
 
-    <Button
-        android:id="@+id/btnAddTasks"
+    <include
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="Go to list of tasks" />
+        layout="@layout/content_main"/>
 
-    <Button
-        android:id="@+id/btnViewWeather"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="260dp"
-        android:text="View weather"/>
+        android:layout_height="match_parent"
+        app:menu="@menu/drawer_menu"
+        app:headerLayout="@layout/drawer_header"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true">
+    </com.google.android.material.navigation.NavigationView>
 
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:text="Date"
-        android:textSize="25sp"
-        android:layout_marginTop="-200dp"
-        android:layout_below="@+id/btnGoCalendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_view_date"/>
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
