added appointments to the menu

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,4 +18,10 @@
         android:icon="@drawable/ic_weather"
         android:title="View weather">
     </item>
+
+    <item
+        android:id="@+id/nav_appointment"
+        android:icon="@drawable/ic_clock"
+        android:title="Appointments">
+    </item>
 </menu>
