--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context="MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity"
+    android:id="@+id/drawer">
 
-    <Button
+    <!--<Button
         android:id="@+id/btnGoCalendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,16 +26,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="260dp"
-        android:text="View weather" />
+        android:text="View weather" />-->
 
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:text="Date"
-        android:textSize="25sp"
-        android:layout_marginTop="-200dp"
-        android:layout_below="@+id/btnGoCalendar"
-        android:layout_width="wrap_content"
+    <include
         android:layout_height="wrap_content"
-        android:id="@+id/text_view_date"/>
+        android:layout_width="match_parent"
+        layout="@layout/drawer_toolbar"/>
 
-</RelativeLayout>
+    <include
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        layout="@layout/content_main"/>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:menu="@menu/drawer_menu"
+        app:headerLayout="@layout/drawer_header"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
