--- a/app/src/main/res/layout/list_view_layout.xml
+++ b/app/src/main/res/layout/list_view_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:textStyle="bold"
+    android:textColor="@color/colorPrimaryDark"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
     android:text="TextView">
 </TextView>
