--- a/app/src/main/res/layout/tasks_layout.xml
+++ b/app/src/main/res/layout/tasks_layout.xml
@@ -26,6 +26,8 @@
             android:layout_width="wrap_content"
             android:onClick="addItemToList"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:textColor="#fff"
             android:text="Add task"/>
     </LinearLayout>
 
