--- a/app/src/main/res/layout/create_appointment.xml
+++ b/app/src/main/res/layout/create_appointment.xml
@@ -31,7 +31,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorPrimaryDark"/>
 
     <EditText
         android:id="@+id/appointmentTitle"
@@ -98,13 +99,16 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="129dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="130dp"
+        android:width="200dp"
         android:onClick="validateAppointment"
         android:text="Add Appointment"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appointmentNotes" />
+        app:layout_constraintTop_toBottomOf="@+id/appointmentNotes"
+        android:background="@color/colorPrimary"/>
 
     <EditText
         android:id="@+id/appStartTime"
