--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -27,6 +27,7 @@
             android:id="@+id/search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:minHeight="35dp"
             android:layout_weight="0.5"
             android:background="@color/colorPrimaryDark"
             android:src="@drawable/ic_stat_name"/>
